rendered/envs/alpha/vmks/ingressroute-alertmanager-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: alertmanager-vpn
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`alertmanager.ts.zebradil.dev`) || Host(`alertmanager.junior.ts.zebradil.dev`)
      services:
        - name: vmalertmanager-vmks
          port: http
